# BAIRD

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
baird/: __init__.py  agent_tools.py  budgets.py  cli.py  config.py  context_compressor.py  context_loader.py  daemon.py  dashboard.py  db.py  diff_apply.py  dispatcher.py  embeddings.py  env.py  event_bus.py  executor.py  executor_client.py  fingerprint.py  forms.py  hub.py  hub_install.py  hub_memory.py  hub_proxy.py  layout.py  mcp_client.py  memory_client.py  model.py  notifier.py  paths.py  permissions.py  pipelines.py  project_enrich.py  project_yaml.py  recall_index.py  repl.py  research.py  rules.py  runner.py  satellite.py  scheduler.py  (+10 more)
baird-ink/: package-lock.json  package.json  tsconfig.json
baird-ink/backend/: adapter.py
baird-ink/src/: cli.tsx  theme.ts
baird-ink/src/adapter/: backend.ts
baird-ink/src/components/: app.tsx  dialog.tsx  header.tsx  input-bar.tsx  message-viewport.tsx  message.tsx  reasoning-part.tsx  status-bar.tsx  text-part.tsx  tool-invocation.tsx  tool-output.tsx
baird-ink/src/store/: index.ts  reducers.ts  session-store.ts  ui-store.ts
baird-ink/src/types/: events.ts  index.ts
configs/: example-host.yaml
docs/: architecture.md  commands.md  configuration.md  design.md  quickstart.md  workflows.md
tests/: conftest.py  test_agent_tools.py  test_budgets.py  test_cli_phase3.py  test_cli_phase4.py  test_cli_phase4b5b.py  test_cli_phase5.py  test_cli_project.py  test_context_compressor.py  test_context_hierarchy.py  test_context_loader.py  test_context_locations.py  test_daemon.py  test_dashboard.py  test_diff_apply.py  test_dispatcher.py  test_env.py  test_event_bus.py  test_events.py  test_executor.py  test_executor_client.py  test_fingerprint.py  test_hub_auth.py  test_hub_dedup.py  test_hub_install.py  test_hub_memory.py  test_hub_proxy.py  test_hub_proxy_transport.py  test_hub_stats.py  test_mcp_client.py  test_memory_client.py  test_model.py  test_notifier.py  test_paths.py  test_permissions.py  test_persistent_session.py  test_pipelines.py  test_project_enrich.py  test_project_hierarchy.py  test_project_locations.py  (+22 more)
