[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baird"
version = "0.0.1"
description = "Bioinformatics AI Research Daemon — personal AI harness with cross-machine provenance"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ethan Baird" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
baird = "baird.cli:app"

[tool.setuptools.packages.find]
include = ["baird*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
