[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baird"
version = "0.0.1"
description = "Bioinformatics AI Research Daemon — personal AI harness with cross-machine provenance"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ethan Baird" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "watchdog>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "croniter>=2.0",
    "prompt-toolkit>=3.0.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Semantic recall via LanceDB + a local embedder. Optional so a
# stripped-down install (e.g. a satellite that only talks to the hub) can
# skip the heavy torch wheel.
recall = [
    "lancedb>=0.13",
    "sentence-transformers>=3.0",
    "pyarrow>=14.0",
]
# MCP servers wired into `baird research` (and eventually `baird code`).
# Optional — without it, /research falls back to the Tavily web path only.
mcp = [
    "mcp>=1.0",
]

[project.scripts]
baird = "baird.cli:app"

[tool.setuptools.packages.find]
include = ["baird*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
